1/30/13 set up model-view transforms to match Java implementation
1/30/13 rename FrameRateDisplay to FrameRateNode
1/30/13 add shaker node
1/30/13 add model types for rgba color, rectangle, solute, solute colorscheme
1/30/13 implement important bits of Java's MessageFormat for i18n using patterns
1/30/13 add tick marks to BeakerNode
1/28/13 add BeakerNode (no ticks yet)
1/28/13 i18n of titles
1/28/13 ported a few model classes from Java to JS
1/28/13 set up project skeleton